tvo update: data + questions/test

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -178,10 +178,10 @@ MASTERPLAN DIGITAAL TOETSEN
                         <p>If you want to do an online exam or inspection with TestVision (using technical support), notify your <span style="color: #079C97;"><b>programme coordinator</b></span> as early as possible. Programme coordinators are in charge of scheduling the <span style="color: #079C97;"><b>exam or inspection</b></span> and sending a request for TestVision support to ICTO. Thereafter, our team must book in all details according to the roster at least 7 weeks before the start of the exam, retake or inspection.</p>
                         <p>The following deadlines apply:
                             <ul>
-                                <li>Exams or inspections in block 1 --- July, 29 (2022)</li>
-                                <li>Exams or inspections in block 2+3 --- September, 23 (2022)</li>
-                                <li>Exams or inspections in block 4 --- December, 30 (2022)</li>
-                                <li>Exams or inspections in block 5+6 --- February, 24 (2023)</li>
+                                <li>Exams or inspections in block 1 --- July, 28 (2023)</li>
+                                <li>Exams or inspections in block 2+3 --- September, 22 (2023)</li>
+                                <li>Exams or inspections in block 4 --- December, 29 (2023)</li>
+                                <li>Exams or inspections in block 5+6 --- February, 23 (2024)</li>
                             </ul>
                         </p>
                     </div>
@@ -319,7 +319,7 @@ MASTERPLAN DIGITAAL TOETSEN
 
         <!-- TLC -->
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 15px; height: auto; background-color: #fafafa;">
-            <table style="border-collapse: collapse; width: 100.812%; border="0">
+            <table style="border-collapse: collapse; width: 100.812%; border:0">
                 <tbody>
                     <tr>
                         <td style="width: 19.3883%;">
@@ -354,7 +354,7 @@ MASTERPLAN DIGITAAL TOETSEN
 
         <!-- Harry Molkenboer-->
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 15px; height: auto; background-color: #fafafa;">
-            <table style="border-collapse: collapse; width: 100.812%; border="0">
+            <table style="border-collapse: collapse; width: 100.812%; border:0">
                 <tbody>
                     <tr>
                         <td style="width: 19.3883%;">
