--- a/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23.html
@@ -134,6 +134,7 @@
     <table style="width: 100%; border-collapse: collapse; border-style: hidden;" border="1">
         <tbody>
 
+         
             <tr>
                 <td style="width: 7%; border-style: hidden; text-align: center; vertical-align: top">
                   <strong><span style="font-size: 13pt;">1.</span></strong>
@@ -246,6 +247,15 @@
     <table style="width: 100%; border-collapse: collapse; border-style: hidden;" border="1">
         <tbody>
 
+          <tr style="height: auto;">
+            <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> </strong></td>
+            <td style="width: 90%; border-style: hidden; height: auto; text-align: right;"><span style="font-size: 11pt;"> <span style="color: #8c8c8c;"><i>TestVision Help:</i></span> 
+
+              <a href="https://uva.testvision.nl/help/en/html/index.html" target="_blank"><img style="width: 5%; " id="8472299" src="https://canvas.uva.nl/courses/8175/files/8472299/preview" alt="english.png" /></a>
+              <a href="https://uva.testvision.nl/help/nl/html/index.html" target="_blank"><img style="width: 5%; " id="8472299" src="https://canvas.uva.nl/courses/8175/files/8472300/preview" alt="dutch.png" /></a><br><br>
+            </span>
+            </td>
+          </tr>
             <tr>
                 <td style="width: 7%; border-style: hidden; text-align: center; vertical-align: top">
                   <strong><span style="font-size: 13pt;">&nbsp;</span></strong>
