--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -56,6 +56,7 @@
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A3"> <span style="color: #000000;"> 2.3 &nbsp; Mark specific answers as correct for all students (modify answer key)</span> </a> </span></p>
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A4"> <span style="color: #000000;"> 2.4 &nbsp; Regrade questions for individual students</span> </a> </span></p>
                 <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A5"> <span style="color: #000000;"> 2.5 &nbsp; Disable chance score</span> </a> </span></p>
+                <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#FAQ_A6"> <span style="color: #000000;"> 2.6 &nbsp; Modify grade calculation</span> </a> </span></p>
             </div>
         </div>
     </div>
@@ -1173,6 +1174,160 @@
         </table>
     </div>
     <div id="A5_video_tab" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
+        <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
+            <tbody>
+                <tr style="height: auto; padding-bottom: 8px;">
+                    <td style="width: 45%; border-style: hidden; height: auto; text-align: left;"><strong><span>ENG</span></strong> (unavailable as of 01-03-2023)</td>
+                    <td style="width: 45%; border-style: hidden; height: auto; text-align: left;"><strong><span>NL</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 50%; border-style: hidden;"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/rV1Cc_WhYhM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
+                    <td style="width: 50%; border-style: hidden;"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/qgM87sq9jQY?start=242" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;"><a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p><a id="FAQ_A6"></a></p>
+<p>&nbsp;</p>
+<h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" target="_blank" rel="noopener" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a></h5>
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4><strong>2.6 &nbsp; Modify grade calculation</strong></h4>
+</div>
+<div class="enhanceable_content tabs">
+    <ul>
+        <li>
+            <a href="#A6_steps_tab" class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Step-by-step</strong></span></a>
+        </li>
+        <li>
+            <a href="#A6_video_tab" class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Video</strong></span></a>
+        </li>
+    </ul>
+    <div id="A6_steps_tab" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
+        <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
+            <tbody>
+                <tr style="height: auto;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto; text-align: right;"><span style="font-size: 12pt;"> <span style="color: #8c8c8c;">TestVision Help:</span> <a href="https://uva.testvision.nl/help/en/html/scoring-instellen.html"><span style="color: #08a68e;">ENG</span></a> | <a href="https://uva.testvision.nl/help/nl/html/scoring-instellen.html"><span style="color: #08a68e;">NL</span></a> </span> <br /><br /></td>
+                </tr>
+                <tr style="height: auto;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto;">
+                        <p><div class="alert alert-info"> 
+                            <a class="icon-info"></a><strong> Note:</strong> You can only change the grade calculation once the exam has been <a href="#FAQ_G2">validated</a>.
+                        </div><br></p>
+                    </td>
+                </tr>
+                <tr style="height: auto;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">1.</span> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Tests</u> menu.</span> </strong></td>
+                </tr>
+                <tr style="height: auto; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto;">
+                        <p><span class="element_toggler" role="button" aria-controls="tests-menu-grade-calc" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Tests menu</em></span> </span></p>
+                        <div id="tests-menu-grade-calc" style="display: none; color: #6096e6;">
+                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="/courses/8175/files/8311811/preview" alt="tests_menu" /></p>
+                        </div>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>2.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Click on the <u>&#8721;-icon</u>.</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">  
+                        <img src="/courses/8175/files/8312245/preview" alt="analyse_icon" /><br><br>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>3.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong>Click on the <u>Modify</u> button.</strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 14pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">
+                    <img src="/courses/8175/files/8320381/preview" alt="modify_button" /><br /><br /></td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>4.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> Go to the <u>Test result</u> tab to view the grade calculation.</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">In this menu you can adjust how the points are converted to grades.<br /><br />
+                        <img src="/courses/8175/files/8420823/preview" alt="test_result_tab" /><br><br>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>5.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;">Modify the grade calculation to your liking.</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">You can configure the percentage of correct answers that belongs to a 1.0, 5.5 and a 10. The graph will show the grade conversion for all percentages. In the screenshot below:<br>
+                        - Scoring <b>10% or less</b> will result in a 1.0.<br>
+                        - Scoring <b>55%</b> will result in a 5.5.<br>
+                        - Scoring <b>100%</b> will result in a 10.<br>
+                        <p><div class="alert alert-info"> 
+                            <a class="icon-info"></a><strong> Note:</strong> To reproduce <b>grade = score / maximum score * 9 + 1</b>, configure your grade calculation as follows:
+                            <ul>
+                                <li>0% &rarr; 1.0</li>
+                                <li>50% &rarr;5.5</li>
+                                <li>100% &rarr; 10</li>
+                            </ul>
+                        </div></p>
+                        <img src="/courses/8175/files/8610965/preview" alt="modify_grade_calculation" /><br><br>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>6.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;">Click on <u>Check modifications</u>.</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">
+                        <img src="/courses/8175/files/8610976/preview" alt="check_modifications_grade_calc" /><br><br>
+                    </td>
+                </tr>
+                <tr style="height: 45px; padding-bottom: 8px;">
+                    <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 13pt;"><strong>7.</strong></span></td>
+                    <td style="width: 89.5941%; height: 10px; border-style: hidden;"><strong><span style="font-size: 13pt;"> An overview will show how the results are affected. Click <u>Apply modifications</u> to confirm.</span></strong></td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 13pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">An overview with three columns will show you how the results are affected by your modifications:<br>
+                        - <b>Original</b> shows what the results were like after the test was taken, before any modifications.<br>
+                        - <b>Current</b> shows what the results are like currently. The original and current columns will be the same if no modifications were done yet.<br>
+                        - <b>New</b> shows what the results will look like after you apply your changes.<br>
+                        <img src="/courses/8175/files/8359525/preview" alt="compare_and_apply" />
+                    </td>
+                </tr>
+                <tr>
+                    <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 12pt;"><strong>&nbsp;</strong></span></td>
+                    <td style="width: 89.5941%; border-style: hidden;">
+                        <p style="font-size: 12pt;">&nbsp;</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div id="A6_video_tab" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
         <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden; font-size: 13pt;">
             <tbody>
                 <tr style="height: auto; padding-bottom: 8px;">
