inspection pagina afgemaakt

--- a/A-Z/Exams/TestVision/22-23/6_Inspection_22-23 CONCEPT.html
+++ b/A-Z/Exams/TestVision/22-23/6_Inspection_22-23 CONCEPT.html
@@ -21,8 +21,8 @@
 
 <!-- Blockquote -->
 <blockquote style="padding-top: 10px; padding-bottom: 10px;"><span style="color: #34495e;">
-    <p>There are two ways to do the inspection: inspection with support or without support. If you want to do an inspection with support you should notify your programme coordinator at least 7 weeks prior to the inspection date. Inspections without support can be arranged with ICTO within 3 days. Please refer to the flowchart below to quickly determine which type of inspection suits your situation.</p>
-    <p style="text-align:center;"><img src="/courses/8175/files/8613168/preview" alt="inzage_flowchart" /></p>
+    <p>There are two ways to do an inspection: with support or without technical support. If you want to do an inspection with support you should notify your programme coordinator at least 7 weeks prior to the inspection date. Inspections without support can be arranged with ICTO within 3 days. Please refer to the diagram below to quickly determine which type of inspection suits your situation.</p>
+    <p style="text-align:center;"><img width="75%" height="75%" src="/courses/8175/files/8614590/preview" alt="inspection_matrix" /></p>
 </span></blockquote>
 
 <!-----------------------BOOKING------------------------>
@@ -30,7 +30,7 @@
 
 <!-- 1 -->
 <h3><span class="element_toggler " aria-controls="FAQ1" aria-label="Toggler toggle list visibility" aria-expanded="false">
-    <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a href="">What's the difference between an inspection with or without technical support?</a></span></h3>
+    <i class="icon-mini-arrow-right"></i><span style="font-size: 13pt;"><a href="">What's the difference between an inspection with and without technical support?</a></span></h3>
 </span>
 <ul id="FAQ1" style="list-style: none; display: none;">
     <li>
@@ -38,7 +38,7 @@
             <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
                 <p><b>Inspections <u>with</u> technical support</b> are similar to digital exams: they are protected by a password on IP-controlled UvA computers, which are prepared by an Assistant Floor Manager (AFM'er). As a result, students cannot take pictures, screenshots or copy questions to their own device. Similar to digital exams, you'll need to inform your programme coordinator at least <b><u>7 weeks ahead of time</u></b> to arrange an inspection with support.</p> 
                 <p><b>Inspections <u>without</u> technical support</b> are done on students' own devices without an AFM'er on location. Students can log in from anywhere, so this type of inspection can also be done from home and last multiple days. Simply <a href="mailto:icto-csw@uva.nl?subject=Inspection without support&body=- Exam name%3A%0D%0A- Start time inspection%3A%0D%0A- End time inspection%3A%0D%0A- Can students place comments in TestVision%3A no (default) / yes%0D%0A- Answer model open questions visible for students%3A no (default) / yes%0D%0APlease attach your answer model if you want it to be visible for students during the inspection!">mail ICTO</a> with the desired timeframe and optional features (comments and answer model) <b><u>3 days ahead of time</u></b> to arrange an inspection without support. We will configure the inspection in TestVision and send you the login instructions for students.</p>
-                <p>In the picture below, all options for booking an inspection are shown: <br><br></p>
+                <p>In the diagram below, all details with regards to the different types inspection types are laid out. <br><br></p>
                 <p style="text-align:center;"><img src="https://canvas.uva.nl/courses/8175/files/7274551/preview" width="85%" alt="inspection.png" /></p>
                 <p>&nbsp;</p>
             </div>
@@ -54,7 +54,7 @@
     <li>
         <div class="content-box">
             <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
-                <p>To arrange an inspection with support, notify your programme coordinator at least 7 weeks prior to the inspection date. The programme coordinator will arrange a room after which ICTO will book the AFM'er.</p>
+                <p>To arrange an inspection with support, notify your programme coordinator at least 7 weeks prior to the inspection date. The programme coordinator will book a room after which ICTO will book the AFM'er.</p>
                 </p>The deadlines for booking an inspection with support can be found on <a target="_blank" href="https://canvas.uva.nl/courses/8175/pages/testvision">this page</a>, under the 'Applying for TestVision' section.</p>
             </div>
         </div>
@@ -115,8 +115,8 @@
     <li>
         <div class="content-box">
             <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
-                <p>The option for students to leave comments during the inspection is turned off by default, to prevent student from overloading teachers with questions and comments in TestVision. Nevertheless, it is possible for students to leave comments on the exam, so you can later review them one by one.</p>
-                <p>Please <a href="mailto:icto-csw@uva.nl?subject=Inzage: zet student comments aan / Inspection: enable student comments">mail ICTO</a> if you'd like to make use of this option.</p>
+                <p>The option for students to leave comments during the inspection is disabled by default, to prevent students from overloading teachers with questions and comments in TestVision.
+                    Please <a href="mailto:icto-csw@uva.nl?subject=Inspection settings&body=- Exam name%3A%0D%0A- Start time inspection%3A%0D%0A- End time inspection%3A%0D%0A- Can students place comments in TestVision%3A no (default) / yes%0D%0A- Answer model open questions visible for students%3A no (default) / yes%0D%0APlease attach your answer model if you want it to be visible for students during the inspection!">mail ICTO</a> if you'd like to make use of this option.</p>
             </div>
         </div>
     </li>
@@ -147,8 +147,9 @@
     <li>
         <div class="content-box">
             <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
-                <p>You are completely free to decide what the answer model may look like. The ICTO team asks you to do two things: (1) Please save the answer model in PDF format, and (2) email the PDF file to <a href="mailto:icto-csw@uva.nl">icto-csw@uva.nl</a> at least 3 days before the inspection.</p>
-                </p>If you have done so, we will make sure the answer model is included in the inspection. This way students can open the answer model on their computer or laptop during the inspection. If it is not convenient for you to deliver the answer model before this deadline, you can still take it with you on USB or print it out for inspection!</p>
+                <p>The option for students to see the answer model for open questions is disabled by default. Please <a href="mailto:icto-csw@uva.nl?subject=Inspection settings&body=- Exam name%3A%0D%0A- Start time inspection%3A%0D%0A- End time inspection%3A%0D%0A- Can students place comments in TestVision%3A no (default) / yes%0D%0A- Answer model open questions visible for students%3A no (default) / yes%0D%0APlease attach your answer model if you want it to be visible for students during the inspection!">mail ICTO</a> if you'd like to make use of this option. 
+                <p>When enabled, students will see the text you entered as criteria (see screenshot below) for each open question in TestVision, <u>but only if you've entered the criteria prior to the examination date</u>. If you have not entered the criteria prior to the exam (or they have changed since), please send ICTO a copy of your answer model and we will make sure the answer model is up to date for the inspection.
+                    <br><br><img src="/courses/8175/files/8614278/preview" alt="criteria" /></p>
             </div>
         </div>
     </li>
@@ -165,7 +166,7 @@
     <li>
         <div class="content-box">
             <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
-                <p><a target="_blank" href="https://canvas.uva.nl/courses/28129/files/7187212?wrap=1">The following page</a> shows how students can log in on TestVision for the inspection. You can share this page (or the document) with your students.</p>
+                <p><a target="_blank" href="https://canvas.uva.nl/courses/28129/files/7187212?wrap=1">The following page</a> shows how students can log in to TestVision for the inspection. You can share this page (or the document) with your students.</p>
             </div>
         </div>
     </li>
@@ -190,14 +191,14 @@
                         <li>Study reference (only if it was filled out prior to the test).</li>
                     </ul>
                 </p>
-                <p>The options below are disabled by default. Please <a href="mailto:icto-csw@uva.nl?subject=Inspection without support&body=- Exam name%3A%0D%0A- Start time inspection%3A%0D%0A- End time inspection%3A%0D%0A- Can students place comments in TestVision%3A no (default) / yes%0D%0A- Answer model open questions visible for students%3A no (default) / yes%0D%0APlease attach your answer model if you want it to be visible for students during the inspection!">mail ICTO</a> if you would also like students to see:
+                <p>The options below are disabled by default. Please <a href="mailto:icto-csw@uva.nl?subject=Inspection without support&body=- Exam name%3A%0D%0A- Start time inspection%3A%0D%0A- End time inspection%3A%0D%0A- Can students place comments in TestVision%3A no (default) / yes%0D%0A- Answer model open questions visible for students%3A no (default) / yes%0D%0APlease attach your answer model if you want it to be visible for students during the inspection!">mail ICTO</a> if you would also like for your students to see:
                     <ul>
                         <li>The answer model for open questions.</li>
                         <li>A button to place comments on the exam.</li>
                     </ul>
                 </p>
                 <p>The image below shows a screenshot of the student interface during an inspection.
-                    <img src="/courses/8175/files/8613391/preview" alt="inspection_student_view" />
+                    <br><br><img src="/courses/8175/files/8614376/preview" alt="inspection_student_view" />
                 </p>
             </div>
         </div>
