inspection pagina klaar

--- a/A-Z/Exams/TestVision/22-23/6_Inspection_22-23 CONCEPT.html
+++ b/A-Z/Exams/TestVision/22-23/6_Inspection_22-23 CONCEPT.html
@@ -191,7 +191,7 @@
                         <li>Study reference (only if it was filled out prior to the test).</li>
                     </ul>
                 </p>
-                <p>The options below are disabled by default. Please <a href="mailto:icto-csw@uva.nl?subject=Inspection without support&body=- Exam name%3A%0D%0A- Start time inspection%3A%0D%0A- End time inspection%3A%0D%0A- Can students place comments in TestVision%3A no (default) / yes%0D%0A- Answer model open questions visible for students%3A no (default) / yes%0D%0APlease attach your answer model if you want it to be visible for students during the inspection!">mail ICTO</a> if you would also like for your students to see:
+                <p>The options below are disabled by default. Please <a href="mailto:icto-csw@uva.nl?subject=Inspection settings&body=- Exam name%3A%0D%0A- Start time inspection%3A%0D%0A- End time inspection%3A%0D%0A- Can students place comments in TestVision%3A no (default) / yes%0D%0A- Answer model open questions visible for students%3A no (default) / yes%0D%0APlease attach your answer model if you want it to be visible for students during the inspection!">mail ICTO</a> if you would also like for your students to see:
                     <ul>
                         <li>The answer model for open questions.</li>
                         <li>A button to place comments on the exam.</li>
