wijzigingen CCSci mail Lisa

--- a/CCSi/Homepage_BUILDINGBLOCKS.html
+++ b/CCSi/Homepage_BUILDINGBLOCKS.html
@@ -37,6 +37,10 @@
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Weekly schedule</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>You can view your weekly schedule via rooster.uva.nl. if you have downloaded or printed this information, please be aware that times, dates and locations may be subject to change and you should regularly check your online timetable.</em></span>
         </a>
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="" href="">
+            <h5><span style="font-size: 14pt; color: #1e1e1e;">TA support</span></h5>
+            <span style="font-size: 10pt; color: #124240;"><em>Coming soon...</em></span>
+        </a>
         <!--<a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">APA Reference Style</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>More information will follow soon</em></span>
