--- a/CCSi/Homepage_Studiepagina.html
+++ b/CCSi/Homepage_Studiepagina.html
@@ -41,7 +41,12 @@
                 be at the attic of ‘Het Limmickhof’, a building at the Amstelhoven complex: Computational Social Science’s Tuesdays at the Attic.</em></span>
         </a>
 
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="/courses/34505/modules/290543?wrap=1">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="/courses/34505/modules/279806?wrap=1">
+            <h5><span style="font-size: 14pt; color: #1e1e1e;">Advanced Reading Group</span></h5>
+            <span style="font-size: 10pt; color: #124240;"><em>The advanced reading group focuses on theory and complex topics in computational social science. We will balance theoretical readings in political science and sociology with cutting-edge research in computational social science.</em></span>
+        </a>
+
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="/courses/34505/modules/319364?wrap=1">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Career Development</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>You, as a Computational Social Science student, will start your career development from Day 1 in the programme. Throughout the courses you will further specialise and professionalise your academic knowledge and skills and you will expand your network when working with external partners.</em></span>
         </a>
