--- a/A-Z/Tools/Readers.html
+++ b/A-Z/Tools/Readers.html
@@ -53,14 +53,17 @@
         <blockquote style="padding-top: 1px; padding-bottom: 5px; margin-top:10px">
             <p style="font-size:11pt">By default, the <i>Readers</i> menu item is hidden in Canvas courses. You can make it visible to yourself and students by following these steps:<br><br>
                 <ol style="font-size:11pt">
-                    <li>    Go to the course <u>Settings</u>.<br><br>
-                            <img src="/courses/8175/files/8643159/preview" alt="settings.png" style="width:30%; border:1px solid grey "/><br><br>
+                    <li style="padding-left:10px">
+                        Go to the course <u>Settings</u>.<br><br>
+                        <img src="/courses/8175/files/8646510/preview" alt="settings.png" style="width:25%; border:1px solid grey "/><br><br>
                     </li>
-                    <li>    Open the <u>Navigation</u> tab.<br>
-                            The top menu items are the items visible to students. The lower ones are invisible to students. To make the <i>Readers</i> menu visible, you can drag the item up with your mouse. You can also click the three dots next to the item and click on <u>Enable</u>.<br><br>
-                            <img src="/courses/8175/files/8643322/preview" alt="enable.png" style="width:50%; border:1px solid grey"/><br><br>
+                    <li style="padding-left:10px">
+                        Open the <u>Navigation</u> tab.<br>
+                        The top menu items are the items visible to students. The lower ones are invisible to students. To make the <i>Readers</i> menu visible, you can drag the item up with your mouse. You can also click the three dots next to the item and click on <u>Enable</u>.<br><br>
+                        <img src="/courses/8175/files/8646538/preview" alt="enable.png" style="width:50%; border:1px solid grey"/><br><br>
                     </li>
-                    <li>    Don't forget to click <u>Save</u> at the bottom of the page.
+                    <li style="padding-left:10px">
+                        Don't forget to click <u>Save</u> at the bottom of the page.
                     </li>
                 </ol>
             </p>
@@ -84,16 +87,20 @@
         <blockquote style="padding-top: 1px; padding-bottom: 5px; margin-top:10px">
             <p style="font-size:11pt">
                 <ol style="font-size:11pt">
-                    <li>    If you open the tool for the very first time, you’ll see an introductory message in your screen. To create a new list, scroll to the bottom and select the <u>Create it</u> button.<br><br>
-                            <img src="/courses/8175/files/8643764/preview" alt="start.png" style="width:70%; border:1px solid grey "/><br><br>
+                    <li style="padding-left:10px">
+                        If you open the tool for the very first time, you’ll see an introductory message in your screen. To create a new list, scroll to the bottom and select the <u>Create it</u> button.<br><br>
+                        <img src="/courses/8175/files/8643764/preview" alt="start.png" style="width:70%; border:1px solid grey "/><br><br>
                     </li>
-                    <li>    A new screen unfolds. Enter the title and possibly a description of your list here. Click on <u>Create</u> if you have done so.<br><br>
-                            <img src="/courses/8175/files/8643765/preview" alt="start2.png" style="width:60%; border:1px solid grey"/><br><br>
+                    <li style="padding-left:10px">
+                        A new screen unfolds. Enter the title and possibly a description of your list here. Click on <u>Create</u> if you have done so.<br><br>
+                        <img src="/courses/8175/files/8643765/preview" alt="start2.png" style="width:60%; border:1px solid grey"/><br><br>
                     </li>
-                    <li>    It is possible to create a blank list or use a template. Choose <u>Default</u> to create a blank list. The weeks can be added later, if necessary.<br><br>
-                            <img src="/courses/8175/files/8643766/preview" alt="start3.png" style="width:60%; border:1px solid grey"/><br><br>
+                    <li style="padding-left:10px">
+                        It is possible to create a blank list or use a template. Choose <u>Default</u> to create a blank list. Sections can be added later, if necessary.<br><br>
+                        <img src="/courses/8175/files/8643766/preview" alt="start3.png" style="width:60%; border:1px solid grey"/><br><br>
                     </li>
-                    <li>    You have now created your first list! Read on to learn how to create sections and add different sources.
+                    <li style="padding-left:10px">
+                        You have now created your first list! Read on to learn how to create sections and add different sources.
                     </li>
                 </ol>
             </p>
@@ -115,8 +122,30 @@
 
     <div id="QS3" style="display: none;">
         <blockquote style="padding-top: 1px; padding-bottom: 5px; margin-top:10px">
-            <p>Tekst QS3</p>
-        </blockquote>
+            <p style="font-size:11pt">
+                <ol style="font-size:11pt">
+                    <li style="padding-left:10px">
+                        If you have created a blank list, there’s automatically one section called <i>Resources</i>. This section can be edited or deleted by clicking the three dots next to the section and selecting <u>Edit section</u> [1] or <u>Delete section</u> [2].<br><br>
+                        <img src="/courses/8175/files/8646879/preview" alt="section.png" style="width:70%; border:1px solid grey "/><br><br>
+                    </li>
+                    <li style="padding-left:10px">
+                        In addition, you can create an entire new section by clicking the button <u>New section</u> [3].<br><br>
+                    </li>
+                    <li style="padding-left:10px">
+                        If you choose to edit a section or create a new one, you can enter the title of the section and add a description.<br><br>
+                        <img src="/courses/8175/files/8646817/preview" alt="section2.png" style="width:60%; border:1px solid grey "/><br><br>
+                    </li>
+                    <li style="padding-left:10px">
+                        It’s also possible to add a 'from' and 'until' date. <br>
+                        These dates can be used to solely inform your students, but you can also indicate that the sources in this section should only be visible during the specified period by selecting <u>Section visible only during these dates</u>. <br><br>
+                        <img src="/courses/8175/files/8646818/preview" alt="section3.png" style="width:80%; border:1px solid grey "/><br><br>
+                    </li>
+
+                    <li style="padding-left:10px">
+                        Click <u>Create</u> after you have finished editing the section details. 
+                    </li>
+                </ol>
+            </p>        </blockquote>
     </div>
         
 </p>
