dode links geupdatet

--- a/A-Z/Exams/Canvas/Exams_Canvas_EN_20-21.html
+++ b/A-Z/Exams/Canvas/Exams_Canvas_EN_20-21.html
@@ -2504,7 +2504,7 @@
                     </h2>
                     <p style="padding-left: 40px;">
                         <span style="font-size: 12pt;">It is possible to grant extra time to the student during the exam. This may be necessary, for example, because a student reports that there are technical problems. Click here to see how you can give one or more students extra time: <span style="color: #000000;">
-                                <a href="https://community.canvaslms.com/docs/DOC-26214-once-i-publish-a-timed-quiz-how-can-i-give-my-students-extra-time" target="_blank" rel="noopener">giving extra time during the exam</a>
+                                <a href="https://community.canvaslms.com/t5/Instructor-Guide/Once-I-publish-a-timed-quiz-how-can-I-give-my-students-extra/ta-p/999" target="_blank" rel="noopener">giving extra time during the exam</a>
                             </span><em>
                                 <span style="color: #000000;">.</span>
                             </em></span>
@@ -2516,11 +2516,11 @@
                     <h2 style="padding-left: 40px;">
                         <span style="font-size: 12pt;"><em>Quiz statistics</em></span>
                     </h2>
-                    <p style="padding-left: 40px;">It is possible to view statistics (the preliminary test results) during the exam. However, please note that progress will only be visible by reloading the page (ctrl + R). Navigate to the quiz in the course and click on 'Quiz Statistics'. Click here to view more information about <a href="https://community.canvaslms.com/docs/DOC-26579-once-i-publish-a-quiz-what-kinds-of-quiz-statistics-are-available" target="_blank" rel="noopener">the quiz statistics</a>.<em></em></p>
+                    <p style="padding-left: 40px;">It is possible to view statistics (the preliminary test results) during the exam. However, please note that progress will only be visible by reloading the page (ctrl + R). Navigate to the quiz in the course and click on 'Quiz Statistics'. Click here to view more information about <a href="https://community.canvaslms.com/t5/Instructor-Guide/Once-I-publish-a-quiz-what-kinds-of-quiz-statistics-are/ta-p/659" target="_blank" rel="noopener">the quiz statistics</a>.<em></em></p>
                     <h2 style="padding-left: 40px;">
                         <span style="font-size: 12pt;"><em>Second attempt</em></span>
                     </h2>
-                    <p style="padding-left: 40px;">In exceptional cases, you may want to give a student a second attempt at the quiz. Click here to see how you can <a href="https://community.canvaslms.com/docs/DOC-26235-once-i-publish-a-quiz-how-can-i-give-my-students-extra-attempts" target="_blank" rel="noopener">give a second attempt</a> to a student.</p>
+                    <p style="padding-left: 40px;">In exceptional cases, you may want to give a student a second attempt at the quiz. Click here to see how you can <a href="https://community.canvaslms.com/t5/Instructor-Guide/Once-I-publish-a-quiz-how-can-I-give-my-students-extra-attempts/ta-p/1242" target="_blank" rel="noopener">give a second attempt</a> to a student.</p>
                 </td>
             </tr>
             <tr style="height: 190px;">
@@ -2530,7 +2530,7 @@
                     </h2>
                     <p style="padding-left: 40px;">If you want to give a student extra time during the exam, you can do this by going back to the settings of the assignment during the exam.</p>
                     <p style="padding-left: 40px;">
-                        <a href="https://canvas.uva.nl/courses/8175/pages/extra-tijd-geven-bij-schrijfopdracht-of-take-home-tentamen" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/extra-tijd-geven-bij-schrijfopdracht-of-take-home-tentamen" data-api-returntype="Page">Click here</a> to see how you can assign additional time to students.<strong></strong>
+                        <a href="https://canvas.uva.nl/courses/8175/pages/extra-tijd-geven-bij-schrijfopdracht-of-take-home-tentamen" target="_blank" rel="noopener" data-api-endpoint="https://community.canvaslms.com/t5/Instructor-Guide/Once-I-publish-a-timed-quiz-how-can-I-give-my-students-extra/ta-p/999" data-api-returntype="Page">Click here</a> to see how you can assign additional time to students.<strong></strong>
                     </p>
                 </td>
             </tr>
