3 dagen inzage engels toegevoegd

--- a/A-Z/Tools/Readers.html
+++ b/A-Z/Tools/Readers.html
@@ -176,7 +176,7 @@
                         <img src="/courses/8175/files/8769537/preview" alt="add2.png" style="width:40%; border:1px solid grey "/><br><br>
                     </li>
                     <li style="padding-left:10px">
-                        Enter keywords such as title or author. You can also do an advanced search. That way, you e you can search specifically for titles, author names or ISBN numbers. <br><br>
+                        Enter keywords such as title or author. You can also do an advanced search. That way, you can search specifically for titles, author names or ISBN numbers. <br><br>
                         <img src="/courses/8175/files/8769536/preview" alt="add3.png" style="width:40%; border:1px solid grey "/><br><br>
                     </li>
                     <li style="padding-left:10px">
